<resources>
    <string name="app_name">Mietercockpit</string>
    <string name="action_settings">Settings</string>
    <string name="butonLogin">Anmelden</string>
    <string name="textOder">oder</string>
    <string name="butonRegister">Registrieren</string>

    <string name="registerHeadline">Registrieren</string>
    <string name="registerDescription">Im Rahmen der Registrierung benötigen wir zunächst Angaben, um Sie als unseren
        Mieter zu identifizieren. Darüber hinaus können Sie hier Ihre Login-Informationen anpassen.
    </string>
    <string name="registerTextIdentifikation">Identifikation</string>
    <string name="registerTextVertrag">Mietvertragsnummer</string>
    <string name="registerTextVertragStart">Vertragsbeginn</string>
    <string name="registerTextNameFirst">Vorname</string>
    <string name="registerTextNameLast">Nachname</string>
    <string name="registerButtonSubmit">Informationen absenden</string>
    <string name="registerButtonCancel">Abbrechen</string>
    <string name="config_data_error_title">Test</string>
    <string name="config_data_no_data_description">test2</string>
    <string name="config_data_bad_service_url_description">test3</string>
    <string name="config_data_build_json_description">test4</string>
    <string name="config_data_bad_field_description">test5</string>
    <string name="ok">OK</string>

    <string name="homeWelcome">Herzlich willkommen, Emma Databerg</string>
    <string name="homeTitle">Was können wir für sie tun?</string>
    <string name="homeText">Für Ihre Zufriedenheit setzen wir alles in bewegung. Nutzen Sie unsere neue App, um aktuelle Informationen zu erhalten und uns Ihre Anliegen mitzuteilen.</string>

</resources>
