<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.RegisterActivity">

    <TextView
            android:text="@string/registerHeadline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="137dp" android:textSize="24sp"/>
    <TextView
            android:text="@string/registerDescription"
            android:layout_width="0dp"
            android:layout_height="89dp"
            android:id="@+id/textView5" app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:textSize="18sp"/>
    <TextView
            android:text="@string/registerTextIdentifikation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView6" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:textStyle="bold"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/editText" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6" android:hint="@string/registerTextVertrag"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="datetime|textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/inputVertragStart" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" android:hint="@string/registerTextVertragStart"
            android:focusable="false"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/editText3" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/inputVertragStart" android:hint="@string/registerTextNameFirst"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/editText4" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" android:hint="@string/registerTextNameLast"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:id="@+id/button"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/editText4" android:text="@string/registerButtonSubmit"
            android:textAllCaps="false" android:background="#0277BD" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/registerButtonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp" android:id="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button"
            style="@style/Widget.AppCompat.Button.Borderless" android:textAllCaps="false" android:onClick="onCancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>