<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".onboarding.LaunchActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textOder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/textViewOr"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
            android:textSize="18sp"/>
    <Button
            android:text="@string/butonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:background="#0277BD" android:textAllCaps="false"
            android:onClick="onLogin"/>
    <Button
            android:text="@string/butonRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/buttonRegister" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewOr" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:textAllCaps="false"
            android:onClick="onRegister"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.511" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.397"
            android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>